# django-form-generator

./: .env.dist  .gitignore  LICENSE  MANIFEST.in  README.md  manage.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
common/: models.py  utils.py
core/: admin.py  asgi.py  consts.py  forms.py  managers.py  models.py  urls.py  views.py  wsgi.py
core/migrations/: 0001_initial.py  0002_rename_form_fieldvaluethrough_value.py  0003_alter_field_content_type_alter_field_file_size_and_more.py  0004_alter_value_options_alter_field_content_type_and_more.py  0005_formdetail_template.py  0006_formapimanager_show_result.py  0007_alter_formapimanager_show_result_and_more.py  0008_form_limit_to_form_redirect_url_form_submit_text_and_more.py  0009_alter_form_success_message.py  0010_remove_formapimanager_show_result_and_more.py  0011_formfieldthrough_position_alter_fieldcategory_title.py  0012_alter_formfieldthrough_position.py  0013_remove_field_category_formfieldthrough_category.py
core/settings/: settings.py
core/templatetags/: form_generator.py
django_form_generator/: admin.py  apps.py  const.py  fields.py  forms.py  managers.py  models.py  settings.py  tests.py  urls.py  views.py
django_form_generator/api/: serializers.py  urls.py  views.py
django_form_generator/common/: admins.py  helpers.py  utils.py  views.py
django_form_generator/migrations/: 0001_initial.py  0002_field_read_only_field_write_only.py  0003_remove_field_error_message_remove_field_file_size_and_more.py  0004_fieldoptionthrough_remove_fieldvaluethrough_field_and_more.py  0005_alter_field_genre_alter_fieldvalidator_validator.py  0006_alter_fieldvalidator_unique_together_and_more.py
django_form_generator/templatetags/: django_form_generator.py
form_generator/: admin.py  apps.py  const.py  forms.py  managers.py  models.py  settings.py  urls.py  views.py
templates/: base.html
(+28 files in other folders)
