[metadata]
name = django_form_generator
version = 0.0.1
author = Mahdi Asadnejad
maintainer = Mahdi Asadnejad
description = An app to create any form in django admin panel.
long_description = file: README.rst
license = MIT
keywords = django form generator form_generator
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django==4.1.1
    requests==2.28.1
    django-htmx==1.12.2
    crispy-bootstrap5==0.6
    django-recaptcha==3.0.0
    django-crispy-forms==1.14.0