[metadata]
name = django_form_generator
url = https://github.com/m3h-D/Form-Generator/tree/release
version = 0.0.38
author = Mahdi Asadnejad
maintainer = Mahdi Asadnejad
description = An app to create any form in django admin panel.
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
keywords = django form generator form_generator django_form_generator
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django>=4.0
    requests>=2.28.1
    django-htmx>=1.12.2
    crispy-bootstrap5>=0.6
    django-recaptcha>=3.0.0
    django-crispy-forms>=1.14.0
    django-tempus-dominus>=5.1.2.0
    drf-recaptcha>=2.0.0
    djangorestframework>=3.0.0